# v4zip

./: CMakeLists.txt  README.md
include/v4zip/: Alphabet.hpp  ArithmeticCoder.hpp  BinaryFormat.hpp  CompressorV4.hpp  ContextModel.hpp  FastaIO.hpp  FastqCompressor.hpp  FastqIO.hpp  IdentifierCodec.hpp  QualityModelV4.hpp  Types.hpp  V4Group.hpp  Varint.hpp
src/: main.cpp
